--- a/app/src/main/res/layout/activity_chi_tiet_sp.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sp.xml
@@ -106,56 +106,59 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:orientation="horizontal">
+                    android:layout_marginRight="5dp">
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
                         android:layout_marginLeft="20dp"
+                        android:id="@+id/recyCTSP"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        tools:listitem="@layout/item_dialog">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+                    <Button
+                        android:textColor="#ec8094"
+                        android:background="@android:color/transparent"
+                        android:layout_gravity="end"
+                        android:id="@+id/fb_add"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingRight="40dp">
+                        android:text="Đánh giá" />
 
-                        <ImageView
-                            android:id="@+id/start1CTSP"
-                            android:layout_width="20dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/start" />
+<!--                    <include-->
+<!--                        android:id="@+id/innerLayout"-->
+<!--                        layout="@layout/item_dialog" />-->
 
-                        <ImageView
-                            android:id="@+id/start2CTSP"
-                            android:layout_width="20dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/start" />
+<!--                    <include-->
+<!--                        android:id="@+id/danhhGia"-->
+<!--                        layout="@layout/activity_feedback" />-->
 
-                        <ImageView
-                            android:id="@+id/start3CTSP"
-                            android:layout_width="20dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/start" />
 
-                        <ImageView
-                            android:id="@+id/start4CTSP"
-                            android:layout_width="20dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/start" />
+<!--                   <RatingBar-->
+<!--                       android:id="@+id/ratingbarCTSP"-->
+<!--                       android:rating="5"-->
+<!--                       android:progressTint="#FFEB3B"-->
+<!--                       android:isIndicator="true"-->
+<!--                       android:layout_marginLeft="14dp"-->
+<!--                       android:layout_marginTop="10dp"-->
+<!--                       style="@style/Widget.AppCompat.RatingBar.Small"-->
+<!--                       android:layout_width="wrap_content"-->
+<!--                       android:layout_height="wrap_content"/>-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/danhGia"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"/>-->
 
-                        <ImageView
-                            android:id="@+id/start5CTSP"
-                            android:layout_width="20dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/start" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/txtSold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="18dp"
-                        android:layout_marginLeft="90dp"
-                        android:layout_marginTop="15dp"
-                        android:text=" " />
+<!--                    <TextView-->
+<!--                        android:id="@+id/txtSold"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="18dp"-->
+<!--                        android:layout_marginLeft="90dp"-->
+<!--                        android:text=" " />-->
                 </LinearLayout>
             </LinearLayout>
             <View android:layout_width="match_parent"
