--- a/app/src/main/res/layout/dong_sanpham_moinhat.xml
+++ b/app/src/main/res/layout/dong_sanpham_moinhat.xml
@@ -67,36 +67,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                   <LinearLayout
-                       android:paddingRight="20dp"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content">
-                       <ImageView
-                           android:id="@+id/star1"
-                           android:src="@drawable/start"
-                           android:layout_width="20dp"
-                           android:layout_height="20dp"/>
-                       <ImageView
-                           android:id="@+id/star2"
-                           android:src="@drawable/start"
-                           android:layout_width="20dp"
-                           android:layout_height="20dp"/>
-                       <ImageView
-                           android:id="@+id/star3"
-                           android:src="@drawable/start"
-                           android:layout_width="20dp"
-                           android:layout_height="20dp"/>
-                       <ImageView
-                           android:id="@+id/star4"
-                           android:src="@drawable/start"
-                           android:layout_width="20dp"
-                           android:layout_height="20dp"/>
-                       <ImageView
-                           android:id="@+id/star5"
-                           android:src="@drawable/start"
-                           android:layout_width="20dp"
-                           android:layout_height="20dp"/>
-                   </LinearLayout>
+                    <RatingBar
+                        android:theme="@style/rating"
+                        android:rating="5"
+                        android:id="@+id/ratingbarSPMN"
+                        style="@style/Widget.AppCompat.RatingBar.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"/>
 
                     <ImageView
                         android:layout_marginTop="-6dp"
